--- a/public/src/View/dashboard.html
+++ b/public/src/View/dashboard.html
@@ -48,5 +48,7 @@
     <ul>
         <li><a href="./GosthiGroup">Group Master</a></li>
         <li><a href="./Nirikshak">Nirikshak</a></li>
+        <li><a href="./GosthiSchedule">Gosthi Schedule</a></li>
+
     </ul>
 </ul>
